--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -86,7 +86,38 @@ select2-container--default .select2-selection--multiple, .select2-container .sel
     background-color: #1d1f20c7 !important; /* Adjust the last value (0.5) for the desired opacity */
   }
 
-  .gallery .gallery-item {
+.gallery .gallery-item {
     
     max-height: 250px !important;
 }
+
+#photographes img {
+    width: 100%;
+    height: 400px;
+    margin-bottom: 25px;
+}
+
+button, .btn-get-started {
+  
+        font-family: var(--font-primary);
+        font-weight: 400;
+        font-size: 14px;
+        display: inline-block;
+        padding: 12px 40px;
+        border-radius: 4px;
+        letter-spacing: 1px;
+        text-transform: uppercase;
+        transition: 0.3s;
+        color: #fff;
+        background: var(--color-primary);
+    
+}
+
+#booking, #user-login, #profile {
+    margin-top: 150px;
+}
+
+.dropdown-item-transparent {
+    background-color: transparent !important;
+}
+
